--- a/css/loisirs.css
+++ b/css/loisirs.css
@@ -1,12 +1,12 @@
 main {
-  width: 70%;
-  margin: 0 auto;
-  height: 100%;
+  height: calc(100% - 232px);
+  justify-content: center; 
 }
 
 #loisirs {
   flex-wrap: wrap;
-  justify-content: center;
+  align-items: center; 
+  justify-content: center; 
   padding: 40px;
 }
 
@@ -76,11 +76,8 @@ footer {
 
 
 @media (max-width: 700px) {
-  .loisirItem {
-    margin: auto; 
-  }
   main {
-    height: auto;
+    height: 100%;
   }
   footer {
     position: static;
