--- a/css/loisirs.css
+++ b/css/loisirs.css
@@ -27,7 +27,73 @@ footer {
   /**************** **************** **************** ------ ANIMATIONS ------ **************** **************** ****************/
 /**************** **************** **************** **************** **************** **************** **************** ****************/
 
-.loisirItem img {
+.n1 img, .n3 img, .n5 img {
+  animation: topImg 2s both;
+  position: relative;
+}
+
+.n2 img, .n4 img, .n6 img {
+  animation: bottomImg 2s both;
+  position: relative;
+  /*animation-delay: .3s; */
+}
+
+.n2 img{
+  animation-delay: .2s;
+}
+
+.n3 img{
+  animation-delay: .4s;
+}
+
+.n4 img{
+  animation-delay: .6s;
+}
+
+.n5 img{
+  animation-delay: .8s;
+}
+
+.n6 img{
+  animation-delay: 1s;
+}
+
+
+@keyframes topImg{
+  from {
+    bottom: 1000px;
+  }
+  to {
+    bottom: 0;
+  }
+}
+
+@keyframes bottomImg {
+  from {
+    top: 1000px;
+  }
+  to {
+    top: 0;
+  }
+}
+
+/**************** **************** **************** **************** **************** **************** **************** ****************/
+  /**************** **************** **************** ------ MEDIA QUERIES ------ **************** **************** ****************/
+/**************** **************** **************** **************** **************** **************** **************** ****************/
+
+
+@media (max-width: 700px) {
+  main {
+    height: 100%;
+  }
+  footer {
+    position: static;
+  }
+}
+
+
+@media (max-width: 1245px) {
+  .loisirItem img {
   animation: border 3s both;
 }
 
@@ -58,33 +124,10 @@ footer {
       border-radius: 100%;
       opacity: 0
   }
-  50% {
-      opacity: 40%;
-  }
-  75% {
-      opacity: 75%; 
-  }
   to {
       border-radius: 10px;
       opacity: 100%; 
   }
 }
-
-/**************** **************** **************** **************** **************** **************** **************** ****************/
-  /**************** **************** **************** ------ MEDIA QUERIES ------ **************** **************** ****************/
-/**************** **************** **************** **************** **************** **************** **************** ****************/
-
-
-@media (max-width: 700px) {
-  main {
-    height: 100%;
-  }
-  footer {
-    position: static;
-  }
 }
-
-
-
-
 
