--- a/css/index.css
+++ b/css/index.css
@@ -4,10 +4,10 @@
 /**************** **************** **************** **************** **************** **************** **************** ****************/
 
 main {
-  height: 80%;
   animation: bg 2s both;
   justify-content: center;
   background-color: #454857; 
+  height: calc(100% - 200px);
 }
 
 #nameArticle {
