--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,6 @@
 
 /**************** **************** **************** **************** **************** **************** **************** ****************/
-    /**************** **************** **************** ------  ------ **************** **************** ****************/
+    /**************** **************** **************** ------ HOME MAIN CONTENT ------ **************** **************** ****************/
 /**************** **************** **************** **************** **************** **************** **************** ****************/
 
 main {
@@ -54,4 +54,30 @@ footer {
     height: calc(100% - 232px);
   }
 }
+
+
+
+
+/**************** **************** **************** **************** **************** **************** **************** ****************/
+    /**************** **************** **************** ------ ERROR PAGE ------ **************** **************** ****************/
+/**************** **************** **************** **************** **************** **************** **************** ****************/
+
+#errorBtn {
+  margin-top: 50px;
+  padding: 10px;
+  align-self: center;
+  border: none;
+  font-size: 12px;
+  color: #708090;
+  background-color: #f4f7f8;
+  box-shadow: 1px 2px 3px lightgrey;
+}
+
+
+
+
+
+
+
+
 
