--- a/css/home.css
+++ b/css/home.css
@@ -4,7 +4,6 @@
 /**************** **************** **************** **************** **************** **************** **************** ****************/
 
 main {
-  animation: bg 2s both;
   justify-content: center;
   background-color: #454857; 
   height: calc(100% - 200px);
@@ -26,6 +25,10 @@ footer {
 /**************** **************** **************** **************** **************** **************** **************** ****************/
     /**************** **************** **************** ------ ANIMATIONS ------ **************** **************** ****************/
 /**************** **************** **************** **************** **************** **************** **************** ****************/
+
+main {
+  animation: bg 2s both;
+} 
 
 #nameArticle {
   animation: name 2s both .8s;
